# lanoel

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  request_benchtest.http  scripts.py
.github/workflows/: build-and-deployments.yml
la_noel/: main.py  request_model.py  utils.py
lanoel/: cli.py  cmds.py  main.py
