[tool.poetry]
name = "la_noel"
version = "0.1.0"
description = ""
authors = ["felixcapuano <felix.capuano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
icecream = "^2.1.3"
isort = "^5.12.0"

[tool.poetry.scripts]
dev = "scripts:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
